# booking-room

./: .gitignore  .mcp.json  .worktreeinclude  AGENTS.md  CLAUDE.local.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  bug-fixed.md  deploy.md  package-lock.json  project.md
br-server/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
br-server/alembic/: env.py
br-server/alembic/versions/: 2026_04_17_0957-0a2b2652445d_create_users_table.py  2026_04_17_1343-1dfa25667f22_create_users_table.py  2026_04_20_1030-ba64420678cf_create_activities_table.py  (+9 more)
br-server/app/: main.py
br-server/tests/: conftest.py  test_activity_service.py  test_admin_auth_api.py  test_admin_booking_api.py  test_admin_booking_service.py  test_admin_menu_api.py  test_admin_models.py  test_admin_permissions.py  test_admin_role_api.py  test_admin_room_routes.py  test_admin_seat_routes.py  test_admin_settings_api.py  test_api_admin_activity.py  test_api_auth.py  test_api_booking.py  test_api_booking_verification.py  test_api_coupon.py  test_api_homepage.py  test_api_seat.py  test_api_study_record.py  test_api_upload.py  test_api_wallet.py  test_auth_service.py  test_banner_service.py  test_booking_model.py  test_booking_verification_service.py  test_captcha_service.py  test_city_api.py  test_city_model.py  test_coupon_service.py  test_dependencies.py  test_jwt_service.py  test_seat_admin_service.py  test_seat_model.py  test_sms_service.py  test_study_record_service.py  test_study_room_admin_service.py  test_study_room_service.py  test_upload.py  test_wallet_service.py  (+1 more)
docs/: api.md
(+282 files in other folders)
